--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "graphql-anywhere": "^4.2.6",
     "graphql-tag": "^2.10.3",
     "graphql-yoga": "^1.18.3",
+    "prisma": "^1.34.10",
     "qs": "^6.9.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-plugin-graphql-schema-hot": "0.0.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
