--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "apollo-link": "^1.2.13",
     "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-server": "^2.11.0",
+    "axios": "^0.19.2",
     "babel-plugin-inline-import": "^3.0.0",
     "graphql": "^14.6.0",
     "graphql-anywhere": "^4.2.6",
     "graphql-tag": "^2.10.3",
+    "graphql-tools": "^4.0.7",
     "graphql-yoga": "^1.18.3",
     "prisma": "^1.34.10",
     "qs": "^6.9.2"
@@ -22,8 +24,8 @@
     "webpack-plugin-graphql-schema-hot": "0.0.10"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "jest node server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
